--- a/index.html
+++ b/index.html
@@ -13,6 +13,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="calculator">
+        <div class="display">19872345</div>
+        <div class="row">
+            <button class="utility">AC</button>
+            <button class="utility">Delete</button>
+        </div>
+        <div class="row">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator">/</button>
+        </div>
+        <div class="row">
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator">x</button>
+        </div>
+        <div class="row">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="operator">-</button>
+        </div>
+        <div class="row">
+            <button class="number">.</button>
+            <button class="number">0</button>
+            <button class="operator">=</button>
+            <button class="operator">+</button>
+        </div>
+    </div>
 </body>
 </html>
