fix: Change AC to Clear
Changed AC to Clear for more clarity and accessability. Because even I
didn't know what AC stood for ha ha.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="calculator">
         <div class="display">19872345</div>
         <div class="row">
-            <button class="utility">AC</button>
+            <button class="utility">Clear</button>
             <button class="utility">Delete</button>
         </div>
         <div class="row">
