fix: Change font to equal letter width font
Changed the font to a font which has equal letter width to better fit
the display

--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
 
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
-
-    <!-- Google Fonts: Oswald -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="calculator">
-        <div class="display">19872345</div>
+        <div class="display">0</div>
         <div class="row">
             <button class="utility">Clear</button>
             <button class="utility">Delete</button>
