--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="calculator">
         <div class="display">0</div>
         <div class="row">
-            <button class="utility">Clear</button>
-            <button class="utility">Delete</button>
+            <button class="utility">AC</button>
+            <button class="utility">DEL</button>
         </div>
         <div class="row">
             <button class="number">7</button>
