feat: Make the calculator work
Also added a DEL button which deletes a number if the user mistypes.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="number">4</button>
             <button class="number">5</button>
             <button class="number">6</button>
-            <button class="operator">x</button>
+            <button class="operator">*</button>
         </div>
         <div class="row">
             <button class="number">1</button>
@@ -33,7 +33,7 @@
             <button class="operator">-</button>
         </div>
         <div class="row">
-            <button class="number">.</button>
+            <button class="dot">.</button>
             <button class="number">0</button>
             <button class="operator">=</button>
             <button class="operator">+</button>
